# mtg-artist-classifier

./: .flake8  .gitignore  conda.yaml  config.yaml  dvc.yaml  dvc_params.yaml  environment_variable_config.env  pyproject.toml
cicd/: cd.yaml  ci.yaml  cicd_params.yaml  download_model.py  upload_and_run_training_script.py  utilities.py
cicd/deployment/: Dockerfile  app.py  config.yaml  download_model.py
data/: .gitignore
mtg_artist_classifier/: env_vars.py
mtg_artist_classifier/classifier/: .gitignore  app.py  artist_mapping.json  config_utils.py  custom_fc_layer.py  main.py  model_def.py  model_params.yaml  model_training_env.yaml  models.py  modify_requirements_script.py  prepare_data_constants.py  train_model.py  train_models.py
mtg_artist_classifier/cnn/: conda.yaml  model_def.py  train_models.py
mtg_artist_classifier/data/: create_model_config.py  download_card_images.py  train_test_split.py  utils.py
mtg_artist_classifier/model_deployment/: Dockerfile  azure_config.json
notebooks/: 0_data_explore.ipynb
tests/: .gitignore  model_config_test.yaml  test_create_artist_json.py  test_get_num_classes.py
