[tool.poetry]
name = "package_placeholder"
version = "0.0.1"
description = ""
authors = ["John Cummings <jcummingsutk@gmail.com>"]
readme = "README.md"
packages = [{ include = "mtg_artist_classifier" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
dvc = "^3.42.0"
mtgsdk = "^1.3.1"
pyhumps = "^3.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
